# mdgdoc

./: .gitignore  Cargo.toml  mdgdoc-plan.md
src/: config.rs  drive.rs  lib.rs  main.rs  pandoc.rs  templates.rs
tests/: config_test.rs  drive_test.rs  pandoc_test.rs  pdf_test.rs  templates_test.rs
