[package]
name    = "mdgdoc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap         = { version = "4", features = ["derive"] }
serde        = { version = "1", features = ["derive"] }
serde_yml    = "0.0.12"
serde_json   = "1"
anyhow       = "1"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
reqwest      = { version = "0.12", features = ["json", "multipart"] }
yup-oauth2   = "11"
shellexpand  = "3"
dirs         = "5"
uuid         = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
